# GUI-calculator

./: CMakeLists.txt  README.md
src/: calculator.cpp  mainwindow.cpp  mainwindow.hpp  parser.cpp  parser.hpp
